force-app/main/default/objects/Case/fields/Are_you_receiving_any_medical_care__c.field-meta.xml
<CustomField>
    <fullName>Are_you_receiving_any_medical_care__c</fullName>
    <label>Are you receiving any medical care?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Addiction</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>