force-app/main/default/objects/Case/fields/Client_Flag__c.field-meta.xml
<CustomField>
    <fullName>Client_Flag__c</fullName>
    <label>Client Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Violent Behaviour</fullName>
            </value>
            <value>
                <fullName>Victim of Violence</fullName>
            </value>
            <value>
                <fullName>Mental Health Issues</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>