force-app/main/default/objects/Case/fields/Encampment_Location__c.field-meta.xml
<CustomField>
    <fullName>Encampment_Location__c</fullName>
    <description>Exact Encampment Location (ex. Brooklyn Bridge Underpass)</description>
    <label>Encampment Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>