force-app/main/default/objects/Case/fields/Reason_for_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discharge__c</fullName>
    <label>Reason for Discharge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>