force-app/main/default/objects/Case/fields/Related_Application__c.field-meta.xml
<CustomField>
    <fullName>Related_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>