force-app/main/default/objects/Case/fields/What_is_your_current_housing_situation__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_current_housing_situation__c</fullName>
    <label>What is your current housing situation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Homeless</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>Encampment</fullName>
            </value>
            <value>
                <fullName>Couch Surfing</fullName>
            </value>
            <value>
                <fullName>Living with Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>