force-app/main/default/objects/Case/recordTypes/Homelessness.recordType-meta.xml
<RecordType>
    <fullName>Homelessness</fullName>
    <active>true</active>
    <businessProcess>Peel Living Tenancy Management</businessProcess>
    <label>Homelessness</label>
</RecordType>