force-app/main/default/objects/Case/recordTypes/Master_Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Master_Service_Request</fullName>
    <active>true</active>
    <businessProcess>Housing Process</businessProcess>
    <description>Housing : Master Service Request</description>
    <label>Housing Service Request</label>
</RecordType>