force-app/main/default/objects/Case/recordTypes/Unit_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Unit_Transfer</fullName>
    <active>true</active>
    <businessProcess>Peel Living Tenancy Management</businessProcess>
    <label>Unit Transfer</label>
</RecordType>